source/blender/blenfont/BLF_api.h
@@ -33,6 +33,12 @@ struct rcti;
 int BLF_init(void);
 void BLF_exit(void);
 
+/**
+ * Close any user-loaded fonts that are not used by the Interface. Call when
+ * loading new blend files so that the old fonts are not still taking resources.
+ */
+void BLF_reset_fonts(void);
+
 void BLF_cache_clear(void);
 
 /**
